--- a/index - Dates and Locations.html
+++ b/index - Dates and Locations.html
@@ -1,3 +1,13 @@
+<!--Heading-->
+<div class="row-bs">
+    <div class="col-md-8-bs col-md-offset-2-bs text-center-bs card-heading">
+        <h2 class="section-heading-bs">Dates and Locations</h2>
+        <hr class="bs" style="border-color: #45769C;">
+        <p class="bs">Starting in 1982, we've hosted amazing camps all over the United States, usually at leading universities. We also work with international partners to bring the SuperCamp experience to teens around the world. More than 70,000 students have participated...and
+            counting!</p>
+    </div>
+</div>
+
 <!--June-->
 <div class="container-bs">
     <div class="row-bs">
@@ -83,6 +93,93 @@
         </div>
     </div>
 </div>
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <!-- Nav tabs -->
+            <div class="card">
+                <ul class="nav nav-tabs" role="tablist">
+                    <li class="active" role="presentation">
+                        <a aria-controls="home" data-toggle="tab" href="#home" role="tab">Home</a>
+                    </li>
+                    <li role="presentation">
+                        <a aria-controls="profile" data-toggle="tab" href="#profile" role="tab">Profile</a>
+                    </li>
+                    <li role="presentation">
+                        <a aria-controls="messages" data-toggle="tab" href="#messages" role="tab">Messages</a>
+                    </li>
+                    <li role="presentation">
+                        <a aria-controls="settings" data-toggle="tab" href="#settings" role="tab">Settings</a>
+                    </li>
+                </ul>
+                <!-- Tab panes -->
+                <div class="tab-content">
+                    <div class="tab-pane active" id="home" role="tabpanel">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+                        survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
+                        with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </div>
+                    <div class="tab-pane" id="profile" role="tabpanel">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </div>
+                    <div class="tab-pane" id="messages" role="tabpanel">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+                        survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
+                        with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </div>
+                    <div class="tab-pane" id="settings" role="tabpanel">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+                        survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passage..
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
