--- a/index - Call To Action.html
+++ b/index - Call To Action.html
@@ -7,11 +7,11 @@
                 <p style="color: #fff;">Ready to start your SuperCamp experience? That's great! Fill out our <a style="color: #45769C;" href="https://supercamp.campintouch.com/ui/forms/application/staff/App">online application</a>, and we'll be in touch! If you have any questions,
                     please visit our <a style="color: #45769C;" href="http://www.supercamp.com/stafftestpage/staff-faq/">FAQ page</a> or reach out to us via email or phone.</p>
             </div>
-            <div class="col-lg-4-bs col-lg-offset-2-bs text-center-bs">
+            <div class="col-xs-6-bs col-lg-offset-2-bs text-center-bs">
                 <i style="color: #fff;" class="fa fa-phone fa-3x sr-contact"></i>
                 <p style="color: #fff;">(800) 228-5327</p>
             </div>
-            <div class="col-lg-4-bs text-center-bs">
+            <div class="col-xs-6-bs text-center-bs">
                 <i style="color: #fff;" class="fa fa-envelope-o fa-3x sr-contact"></i>
                 <p style="color: #fff;"><a style="color: #45769C;" href="mailto:staffing@supercamp.com">Staffing@SuperCamp.com</a></p>
             </div>
