--- a/index - Dates and Locations Holder.html
+++ b/index - Dates and Locations Holder.html
@@ -7,10 +7,10 @@
                     <a class="nav-link active" data-toggle="tab" href="#panel1" role="tab">June</a>
                 </li>
                 <li class="nav-item waves-effect waves-light">
-                    <a class="nav-link" data-toggle="tab" href="#panel2" role="tab">July</a>
+                    <a class="nav-link active" data-toggle="tab" href="#panel2" role="tab">July</a>
                 </li>
                 <li class="nav-item waves-effect waves-light">
-                    <a class="nav-link" data-toggle="tab" href="#panel3" role="tab">August</a>
+                    <a class="nav-link active" data-toggle="tab" href="#panel3" role="tab">August</a>
                 </li>
             </ul>
 
@@ -39,7 +39,7 @@
 
                 <!--Panel 2-->
                 <!--July-->
-                <div class="tab-pane fade active" id="panel2" role="tabpanel">
+                <div class="tab-pane fade" id="panel2" role="tabpanel">
                     <div class="container-bs">
                         <div class="row-bs">
                             <div class="col-sm-4-bs text-center-bs">
@@ -94,7 +94,7 @@
 
                 <!--Panel 3-->
                 <!--August-->
-                <div class="tab-pane fade active" id="panel3" role="tabpanel">
+                <div class="tab-pane fade" id="panel3" role="tabpanel">
                     <div class="container-bs">
                         <div class="row-bs">
                             <div class="col-sm-12-bs text-center-bs">
