--- a/index - Dates and Locations Holder.html
+++ b/index - Dates and Locations Holder.html
@@ -1,9 +1,9 @@
-<section id="datesandlocations">
+<section id="datesandlocations" class="bg-primary-bs">
     <div class="container-bs">
         <div class="row-bs">
             <div class="col-md-8-bs col-md-offset-2-bs text-center-bs card-heading">
                 <h2 class="section-heading-bs">Dates and Locations</h2>
-                <hr class="bs" style="border-color: #45769C;">
+                <hr class="bs" style="border-color: #97ABBD;">
                 <p class="bs">Starting in 1982, we've hosted amazing camps all over the United States, usually at leading universities. We also work with international partners to bring the SuperCamp experience to teens around the world. More than 70,000 students have
                     participated...and counting!</p>
             </div>
