--- a/index - Dates and Locations Holder.html
+++ b/index - Dates and Locations Holder.html
@@ -10,7 +10,7 @@
         </div>
         <div class="row-bs">
             <!-- Nav tabs -->
-            <ul class="nav nav-tabs tabs-3 bg-secondary-bs" role="tablist">
+            <ul class="nav nav-tabs tabs-3" role="tablist" style="background-color: #0B62A4;">
                 <li class="nav-item waves-effect waves-light">
                     <a class="nav-link active" data-toggle="tab" href="#panel1" role="tab">June</a>
                 </li>
