--- a/index - Call To Action.html
+++ b/index - Call To Action.html
@@ -4,16 +4,18 @@
             <div style="margin-bottom: 25px;" class="col-lg-8-bs col-lg-offset-2-bs text-center-bs">
                 <h2 class="section-heading-bs">Apply Today!</h2>
                 <hr class="bs">
-                <p style="color: #fff;">Ready to start your SuperCamp experience? That's great! Fill out our <a style="color: #5FACF2;" href="https://supercamp.campintouch.com/ui/forms/application/staff/App">online application</a>, and we'll be in touch! If you have any questions,
-                    please visit our <a style="color: #5FACF2;" href="http://www.supercamp.com/stafftestpage/staff-faq/">FAQ page</a> or reach out to us via email or phone.</p>
+                <p style="color: #fff;">Ready to start your SuperCamp experience? That's great! Fill out our <a style="text-decoration: underline;" href="https://supercamp.campintouch.com/ui/forms/application/staff/App">online application</a>, and we'll be in touch! If you have
+                    any questions, please visit our <a style="text-decoration: underline;" href="http://www.supercamp.com/stafftestpage/staff-faq/">FAQ page</a> or reach out to us via email or phone.</p>
             </div>
+        </div>
+        <div class="row-bs">
             <div class="col-xs-6-bs col-lg-offset-2-bs text-center-bs">
-                <i style="color: #fff;" class="fa fa-phone fa-3x sr-contact"></i>
+                <i style="color: #fff;" class="fa fa-phone fa-3x"></i>
                 <p style="color: #fff;">(800) 228-5327</p>
             </div>
             <div class="col-xs-6-bs col-lg-offset-2-bs text-center-bs">
-                <i style="color: #fff;" class="fa fa-envelope-o fa-3x sr-contact"></i>
-                <p style="color: #fff;"><a style="color: #5FACF2;" href="mailto:staffing@supercamp.com">Staffing@SuperCamp.com</a></p>
+                <i style="color: #fff;" class="fa fa-envelope-o fa-3x"></i>
+                <p style="color: #fff;"><a style="text-decoration: underline;" href="mailto:staffing@supercamp.com">Staffing@SuperCamp.com</a></p>
             </div>
         </div>
     </div>
