--- a/What's New Section.html
+++ b/What's New Section.html
@@ -10,28 +10,32 @@
         <div class="row-bs">
             <div class="col-lg-3-bs col-md-6-bs text-center-bs">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-users text-primary sr-icons" style="color: #34618C;"></i>
+                    <i class="fa fa-4x fa-users text-primary sr-icons" style="color: #34618C;; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s;"
+                        data-sr-id="2"></i>
                     <h3 style="color: #fff;">Quantum Academy</h3>
                     <p style="color: #fff;">This year we are proud to offer an entirely new program called Quantum Academy. It encompasses all the best aspects of both Quantum University and Leadership Forum, while providing its own unique flow.</p>
                 </div>
             </div>
             <div class="col-lg-3-bs col-md-6-bs text-center-bs">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-bullhorn text-primary sr-icons" style="color: #34618C;"></i>
+                    <i class="fa fa-4x fa-users text-primary sr-icons" style="color: #34618C;; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "
+                        data-sr-id="2"></i>
                     <h3 style="color: #fff;">10 Day and 6 Day Options</h3>
                     <p style="color: #fff;">For Senior Forum there will be 10 day as well as 6 day options. For Junior Forum there will be 6 Day Options.</p>
                 </div>
             </div>
             <div class="col-lg-3-bs col-md-6-bs text-center-bs">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-briefcase text-primary sr-icons" style="color: #34618C;"></i>
+                    <i class="fa fa-4x fa-users text-primary sr-icons" style="color: #34618C;; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "
+                        data-sr-id="2"></i>
                     <h3 style="color: #fff;">Thank You Academic Advisory!</h3>
                     <p style="color: #fff;">Thank you to the Academic Advisory - Ben Balkwill, Karen Borbolla, Patti Brucky, Bobbi DePorter, Megan Kennedy, Jeff Miller, Richard Reyes, and Charles Smith - for all of the support in making the program updates!</p>
                 </div>
             </div>
             <div class="col-lg-3-bs col-md-6-bs text-center-bs">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-graduation-cap text-primary sr-icons" style="color: #34618C;"></i>
+                    <i class="fa fa-4x fa-users text-primary sr-icons" style="color: #34618C;; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "
+                        data-sr-id="2"></i>
                     <h3 style="color: #fff;">Distinctions</h3>
                     <p style="color: #fff;">[Distinctions to highlight.]</p>
                 </div>
